# BSUIR-labs

./: .gitignore  README.md  build.sbt  pom.xml
AHPP_lab1/: CMakeLists.txt  main.c  main_vect.s
AHPP_lab2/: AHPP_lab2.c  CMakeLists.txt  run_lab2.sh
AHPP_lab3/: CMakeLists.txt  main.c
AHPP_lab3/Debug/: AHPP_lab3
AHPP_lab4/: main.cpp
AHPP_lab5/: kernel.cu
AHPP_lab6/: CMakeLists.txt  kernel.cu
AHPP_lab7/: kernel.cu
AHPP_lab8/: kernel.cu
DSP_lab1/: build.sbt
DSP_lab1/src/main/scala-2.11/: Complex.scala  DFT.scala  FFT.scala  GenericFT.scala  Main.scala  math.scala
DSP_lab1/src/main/scala-2.11/ft/: Complex.scala  DFT.scala  FFT.scala  FTCharts.scala  GenericFT.scala  Main.scala  SwingGUI.scala
DSP_lab1/src/test/scala-2.11/: DFTSpec.scala  FFTSpec.scala  FTSpec.scala
DSP_lab1/src/test/scala-2.11/dsp/: GenericSpec.scala
DSP_lab1/src/test/scala-2.11/ft/: DFTSpec.scala  FFTSpec.scala  FTSpec.scala
high-performance-processors-architecture/: .gitignore
high-performance-processors-architecture/AHPP_lab1/: main.c  main_novect.s
high-performance-processors-architecture/AHPP_lab2/: AHPP_lab2.c
high-performance-processors-architecture/AHPP_lab3/: main.c
high-performance-processors-architecture/AHPP_lab4/: CMakeLists.txt
high-performance-processors-architecture/AHPP_lab5/: CMakeLists.txt  kernel.cu
high-performance-processors-architecture/AHPP_lab6/: kernel.cu
high-performance-processors-architecture/AHPP_lab7/: CMakeLists.txt
high-performance-processors-architecture/AHPP_lab8/: CMakeLists.txt
lab1/: pom.xml
lab1/src/: LehmerRandomGenerator.java  Main.java
lab1/src/main/java/: ChartGUI.java  Constants.java  LehmerRandomGenerator.java  Main.java  RandomGenerator.java
modeling/: .gitignore
ppta/: build.sbt  lab4grammar.txt  lab4myGrammar.txt  myGrammar.txt  stateMachine.txt  testGrammar.txt
ppta/src/main/resources/: stylesheet.css
ppta/src/main/scala/lab1/: Grammar.scala  GrammarType.scala  Main.scala  Rule.scala  Symbol.scala  Word.scala
ppta/src/main/scala/lab2/: DeterminateFiniteStateMachine.scala  Deterministic.scala  FiniteStateMachine.scala  GrammarFiniteStateMachine.scala  State.scala  StateMachineParams.scala  Transition.scala
ppta/src/main/scala/lab3/: Minimized.scala
src/main/scala/: Main.scala
src/main/scala/fss/: FSS.scala  Main.scala
src/main/scala/fss/entity/: Fish.scala  (+1 more)
src/main/scala/plot/: PlotTools.scala
src/test/scala/: GenericSpec.scala
state-machine-theory/: build.sbt
swarm-intelligence/: build.sbt
(+159 files in other folders)
